# best-of-n-diffusion-policy

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: claims.md  differentiation_from_wam_jepa.md  diffusion_policy_validity_checklist.md  final_audit.md  ideal_metrics.md  readiness.md  theory.md
experiments/: controlled_sampler.py  deployment_stress.py  fetch_robotics_benchmark.py  learned_diffusion_policy_lite.py  nk_budget.py  scorer_comparison.py
paper/: draft.md  experiments.md  intro.md  limitations.md  method.md  outline.md
paper/final/: best of n diffusion policy-v4-manifest.json
paper/iclr/: SUBMISSION_CHECKLIST.md  appendix.tex  main.tex  references.bib
results/: claims_status.json  claims_status.md  controlled_sampler_summary.json  deployment_stress_generated.tex  deployment_stress_summary.json  fetch_robotics_generated.tex  fetch_robotics_protocol_freeze.json  fetch_robotics_summary.json  ideal_metrics_status.json  ideal_metrics_status.md  learned_policy_lite_summary.json  nk_budget_summary.json  scorer_comparison_summary.json  true_diffusion_summary.json
results/smoke/: controlled_sampler_summary.json  ideal_metrics_status.json  ideal_metrics_status.md  learned_policy_lite_summary.json  (+3 more)
scripts/: build_iclr_paper.py  build_iclr_paper.sh  claim_audit.py  run_all.sh  run_claim_audit.sh  run_smoke.sh  run_with_src.py
tests/: test_alignment_latency_deployment.py  test_diffusion_lite_image.py  test_diversity.py  test_fetch_robotics_benchmark.py  test_reproducibility.py  test_stats.py  test_theory.py
(+93 files in other folders)
