[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "best-of-n-diffusion"
version = "0.1.0"
description = "Best-of-N laws for diffusion policy trajectory reranking."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "matplotlib>=3.7",
  "torch>=2.0",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
