[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "audit-then-sample-diffusion-policy"
version = "0.1.0"
description = "Audit-Then-Sample diagnostics for diffusion policy trajectory search."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23,<2",
  "pandas>=1.5",
  "matplotlib>=3.7",
  "torch>=2.0",
  "gym-pusht>=0.1.6",
  "gymnasium-robotics>=1.3",
  "mujoco>=3.0",
  "pymunk>=6.6,<7",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
